k8s/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-cicd
  labels:
    app.kubernetes.io/name: python-cicd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: python-cicd.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-cicd
                port:
                  name: http
